更新小宇宙链接

--- a/_posts/2018-12-21-怀旧金曲发烧大碟.md
+++ b/_posts/2018-12-21-怀旧金曲发烧大碟.md
@@ -6,5 +6,6 @@ border: "000"
 fill: "00d2ff"
 title-position: "top-right"
 netease-id: "2058506457"
+cosmos-id: "5e284e0e418a84a046269886"
 ---
 就像电台名的字面意思，这里播放的内容就当是一时兴起，自己熟悉的、不熟悉的，没有什么特定的限制和规矩，whatever，想到就录了。
