--- a/_posts/2019-06-28-听爵士吧？.md
+++ b/_posts/2019-06-28-听爵士吧？.md
@@ -6,5 +6,7 @@ border: "000000"
 fill: "ffffff"
 title-position: "top-right"
 netease-id: "2061881368"
+cosmos-id: "5e284e0e418a84a046269882"
+
 ---
 久违了，Whatever.FM 的第三期来了。今天的主题和《辐射》有关。
