--- a/_posts/2019-10-30-听朋克吧？.md
+++ b/_posts/2019-10-30-听朋克吧？.md
@@ -6,5 +6,6 @@ border: "000000"
 fill: "ffffff"
 title-position: "top-right"
 netease-id: "2063895913"
+cosmos-id: "5e284e0e418a84a04626987e"
 ---
 二号主播第一次上线，本期怀旧气息浓重，请大家小心收听
