--- a/_posts/2019-01-31-看番剧吧.md
+++ b/_posts/2019-01-31-看番剧吧.md
@@ -6,5 +6,6 @@ border: "063342"
 fill: "ffcc00"
 title-position: "top-left"
 netease-id: "2059336890"
+cosmos-id: "5e284e0e418a84a046269884"
 ---
 刷抖音不适合我，还是看番剧吧；知识焦虑不适合我，还是看番剧吧；新零售不适合我，还是看番剧吧；互联网寒冬还是不适合我，依然还是看番剧吧。
