--- a/_posts/2020-09-17-去京都吧.md
+++ b/_posts/2020-09-17-去京都吧.md
@@ -6,5 +6,6 @@ border: "000000"
 fill: "ffffff"
 title-position: "top-left"
 netease-id: "2069352246"
+cosmos-id: "5f63f6ea83c34e85dd13c154"
 ---
 久违了诸君，还记得订阅过这个不定期更新的电台么？Whatever，今天还是老样子，几首歌、一点点想法，以及对一座城市的回忆。
