--- a/_posts/2021-07-01-寻猫记.md
+++ b/_posts/2021-07-01-寻猫记.md
@@ -6,7 +6,7 @@ border: "000000"
 fill: "ffffff"
 title-position: "top-right"
 netease-id: ""
-cosmos-id: ""
+cosmos-id: "60dd575049753b468dd2f8cb"
 ---
 2021 年 5 月 18 日，家住杨浦区某小区的德文卷毛猫 Tora 走丢了。这是一期关于之后 2 天半内想尽办法、乃至于不惜怪力乱神病急乱投医的一系列搜救行动的记录。
 
